--- a/templates/Item.html
+++ b/templates/Item.html
@@ -89,7 +89,7 @@
 	</script>
 
 	<div class="icon2">
-        <a href="#" class="Youtube">Youtube<i class="fab fa-youtube"></i></a>
+		<a href="https://www.youtube.com/watch?v=z6yprwC16_M" class="Youtube">Youtube<i class="fab fa-youtube"></i></a>
     </div>
 </body>
 </html>
