--- a/templates/About.html
+++ b/templates/About.html
@@ -114,7 +114,7 @@
 	
 
 <div class="icon2">
-	<a href="#" class="Youtube">Youtube<i class="fab fa-youtube"></i></a>
+	<a href="https://www.youtube.com/watch?v=z6yprwC16_M" class="Youtube">Youtube<i class="fab fa-youtube"></i></a>
 </div>
 {% endblock %}
 </body>
