--- a/templates/Account.html
+++ b/templates/Account.html
@@ -65,7 +65,7 @@
     </div>
 
     <div class="icon2">
-        <a href="#" class="Youtube">Youtube<i class="fab fa-youtube"></i></a>
+        <a href="https://www.youtube.com/watch?v=z6yprwC16_M" class="Youtube">Youtube<i class="fab fa-youtube"></i></a>
     </div>
     
 
