--- a/templates/Product.html
+++ b/templates/Product.html
@@ -60,7 +60,7 @@
 	{% endblock %}
 
 	<div class="icon2">
-        <a href="#" class="Youtube">Youtube<i class="fab fa-youtube"></i></a>
+        <a href="https://www.youtube.com/watch?v=z6yprwC16_M" class="Youtube">Youtube<i class="fab fa-youtube"></i></a>
 	</div>
 
 	
